<resources>
    <string name="app_name">Volt RF Remote Adaptor</string>

    <string name="title_rgb">RGB</string>
    <string name="title_cw">CW</string>
    <string name="title_remote">Remote Controller</string>

    <string name="title_network">Network</string>
    <string name="title_zone">Zone</string>
    <string name="title_setting">Settings</string>
    <string name="title_add_member">Add Member</string>

    <string name="Luminance">Luminance</string>
    <string name="Zone">Zone</string>


    <string name="zone1">zone1</string>
    <string name="zone2">zone2</string>
    <string name="zone3">zone3</string>
    <string name="zone4">zone4</string>
    <string name="zone5">zone5</string>
    <string name="zone6">zone6</string>

    <string name="luminance_25">25%</string>
    <string name="luminance_50">50%</string>
    <string name="luminance_75">75%</string>
    <string name="luminance_100">100%</string>

    <string name="temperature_2200">2200k</string>
    <string name="temperature_2700">2700k</string>
    <string name="temperature_3000">3000k</string>
    <string name="temperature_4000">4000k</string>

    <string name="remote_flash">FLASH</string>
    <string name="remote_strobe">STROBE</string>
    <string name="remote_fade">FADE</string>
    <string name="remote_smooth">SMOOTH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_for_change_zone_name">Edit Title</string>
    <string name="text_for_change_zone_name">Change the title of the cell</string>

    <string name="ble_connect_message">"Bluetooth connect success"</string>

</resources>