<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_luminance_zone_module">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        >
        <LinearLayout
            android:id="@+id/zone_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp">


            <ImageView
                android:id="@+id/zone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_zone"

                />

            <TextView
                android:id="@+id/zone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/Zone"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@+id/zone_icon"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zone_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zone_top"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/zone_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone1"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/zone_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone2"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/zone_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone3"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zone_second_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zone_first_line"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/zone_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone4"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/zone_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone5"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/zone_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_luminance_zone"
                android:text="@string/zone6"
                android:gravity="center"
                android:textColor="@color/text"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="15sp"
                android:paddingBottom="5sp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/zone_second_line"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>