<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">
    <data></data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


<!--        亮度部分-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/luminance_layout"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/bg_luminance_zone_module"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="440dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints">


<!--                logo和title-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/luminance_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:id="@+id/luminance_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_luminance"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintLeft_toRightOf="@id/luminance_icon"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:id="@+id/luminance_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Luminance"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            tools:ignore="MissingConstraints"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/luminance_current_progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Luminance"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            tools:ignore="MissingConstraints"/>
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

<!--                进度条-->
                <SeekBar
                    android:id="@+id/luminance_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:maxHeight = "30dp"
                    android:maxWidth="300dp"
                    android:progress="20"
                    android:max="255"
                    android:thumb="@drawable/seekbar_thumb"
                    android:thumbOffset="6dp"
                    android:progressDrawable="@drawable/layer_list_seekbar"
                    app:layout_constraintTop_toBottomOf="@id/luminance_top"
                    android:splitTrack="false"
                    android:layout_marginTop="20dp"/>

<!--                三个亮度按钮-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/luminance_first_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/luminance_seekbar"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:id="@+id/luminance_25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/luminance_25"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:textSize="20sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/luminance_50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/luminance_50"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/luminance_75"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/luminance_75"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


<!--        分组部分-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/bg_luminance_zone_module"
            app:layout_constraintTop_toBottomOf="@id/luminance_layout"
            android:layout_marginTop="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
<!--                title和logo-->
                <LinearLayout
                    android:id="@+id/zone_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    >

                    <ImageView
                        android:id="@+id/zone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_zone"

                        />

                    <TextView
                        android:id="@+id/zone_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/Zone"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toRightOf="@+id/zone_icon"
                        android:layout_gravity="center"
                        tools:ignore="MissingConstraints"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/zone_first_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/zone_top"
                    android:layout_marginTop="15dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:background="@drawable/btn_luminance_zone"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/zone_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zone1"
                            android:textColor="@color/text"
                            android:textSize="15sp"
                            android:paddingBottom="5sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/zone_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/zone2"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/zone_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/zone3"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/zone_second_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/zone_first_line"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/zone_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/zone4"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/zone_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/zone5"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/zone_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_luminance_zone"
                        android:text="@string/zone6"
                        android:gravity="center"
                        android:textColor="@color/text"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textSize="15sp"
                        android:paddingBottom="5sp"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>