<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data></data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.colorControl.CwFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
             android:layout_height="match_parent"
            android:background="#00FFFFFF">
            <com.lin.voltrfremoteadaptorandroid.view.AllOnOffModule
                android:id="@+id/cw_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toTopOf="parent"/>
            <SeekBar
                android:id="@+id/cw_temperature_seekbar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:maxHeight = "100dp"
                android:progress="2700"
                android:min="2200"
                android:max="4000"
                android:thumb="@drawable/seekbar_thumb_cw"
                android:progressDrawable="@drawable/bg_temperature_seekbar"
                app:layout_constraintTop_toBottomOf="@id/cw_top"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>


            <GridLayout
                android:id="@+id/cw_temperature_presuppose"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/cw_temperature_seekbar"
                android:layout_marginTop="20dp"
                android:alignmentMode="alignMargins"
                android:columnCount="8"
                android:rowCount="1"
                android:columnOrderPreserved="true">
                <LinearLayout
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/cw_presuppose1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/color_circle_bg"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_2200"
                        android:textSize="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/cw_presuppose2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/color_circle_bg"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_2700"
                        android:textSize="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/cw_presuppose3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/color_circle_bg"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_3000"
                        android:textSize="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/cw_presuppose4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/color_circle_bg"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_4000"
                        android:textSize="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_columnWeight="2"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/cw_presuppose5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/color_quadrate_bg"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:id="@+id/cw_current_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2200k"
                        android:textSize="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </GridLayout>

            <com.lin.voltrfremoteadaptorandroid.view.LuminanceAndZoneModule
                android:id="@+id/luminance_and_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cw_temperature_presuppose"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>